# sca_run

./: .gitattributes  .gitignore  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_demo_server.sh  run_server.py  setup_integration.py  test.txt
SCA_finetune/final_consolidated/: README.md  adapter_config.json  adapter_model.safetensors
config/: default.toml
sca_run/: config.py  demo_server.py  feature_extractor.py  io_types.py  qwen_client.py  server.py  team_infer.py  types.py  wav_utils.py
sca_run/static/: index.html
scripts/: benchmark.py  run_demo_server.sh  run_server.py  run_test.py  setup_integration.py  test_unasyncio.py
scripts/test/: test_integration.py
src/: client_utils.py  inference.py  inference_temp.py
src/sca_run/: __init__.py  audio_chunker.py  config.py  qwen_client.py  server.py  team_infer.py
src/sca_run/static/: index.html
src/utils/: compile.py
