[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca_run"
version = "0.1.0"
description = "SCA Run: Qwen3-Omni Full Duplex Server"
readme = "README.md"
requires-python = ">=3.10, <3.13"

dependencies = [
    "ninja",      # 빌드 속도 향상 필수템
    "packaging",
    "setuptools",
    "wheel", 
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "numpy>=1.24",
    "soundfile>=0.12.0",
    "scipy",
]

[project.optional-dependencies]
full = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.48.0",
    "accelerate>=1.0.0",
    "peft>=0.11.0",
    "librosa>=0.10.0",
    "numba>=0.60.0",
#    "flash-attn>=2.6.3",
    "bitsandbytes",
]

cpu = ["torch>=2.4.0", "torchaudio>=2.4.0", "torchvision>=0.19.0"]
cu126 = ["torch>=2.4.0", "torchaudio>=2.4.0", "torchvision>=0.19.0"]
cu128 = ["torch>=2.4.0", "torchaudio>=2.4.0", "torchvision>=0.19.0"]
cu130 = ["torch>=2.4.0", "torchaudio>=2.4.0", "torchvision>=0.19.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sca_run*", "utils*"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]


[tool.uv.extra-build-dependencies]
flash-attn = ["torch>=2.4.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
